# snap-assets

./: README.md  Snap-Assets.html  doc-index.html  index-frames.html  index.html  mini_Snap-Assets.html  snap-asset-pipeline.cabal  snap-assets.cabal  snap-assets.haddock
assets/frameworks/: jquery.plugin-foo.js
src/: CLI.hs  Main.hs  Snap-Assets.html
src/Snap/: Assets.hs
