name:                snap-assets
version:             0.1.0.0

license:             OtherLicense
license-file:        UNLICENSE

author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com

category:            Snap
build-type:          Simple
cabal-version:       >= 1.8


library
    exposed-modules:     Snap.Assets

    build-depends:       SHA
    build-depends:       attoparsec
    build-depends:       base
    build-depends:       bytestring
    build-depends:       containers
    build-depends:       directory
    build-depends:       filepath
    build-depends:       snap-core
    build-depends:       text
    build-depends:       time
    build-depends:       transformers

    hs-source-dirs:      src

    extensions:          OverloadedStrings
    ghc-options:         -Wall -Werror

executable server
    Main-Is: Main.hs
    hs-source-dirs:      src
    build-depends:       attoparsec
    build-depends:       base, bytestring, snap-core
    build-depends:       time
    build-depends:       directory
    build-depends:       containers
    build-depends:       transformers
    build-depends:       snap-server
    build-depends:       SHA
    build-depends:       filepath
    build-depends:       text

    Extensions:          OverloadedStrings

executable precompiler
    Main-Is: CLI.hs
    hs-source-dirs:      src
    build-depends:       attoparsec
    build-depends:       base, bytestring, snap-core
    build-depends:       time
    build-depends:       directory
    build-depends:       containers
    build-depends:       transformers
    build-depends:       snap-server
    build-depends:       SHA
    build-depends:       filepath
    build-depends:       text

    Extensions:          OverloadedStrings
